--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(ContrastsSAINTexpress)
 export(add_protein_lengths)
+export(copy_SAINT_express)
 export(copy_SAINTe_doc)
 export(protein_2localSaint)
 export(runSaint)
