--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,7 @@ export(ContrastsSAINTexpress)
 export(add_protein_lengths)
 export(copy_SAINT_express)
 export(copy_SAINTe_doc)
+export(normalize_exp)
 export(protein_2localSaint)
 export(runSaint)
+export(transform_force)
