update DIANN_SE to include SE inputs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(add_protein_lengths)
 export(apparams_Bfabric)
 export(copy_SAINT_express)
 export(copy_SAINTe_doc)
+export(get_files_DIANN)
 export(get_params_Bfabric)
 export(normalize_exp)
 export(protein_2localSaint)
