--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,12 @@ export(add_protein_lengths)
 export(apparams_Bfabric)
 export(copy_SAINT_express)
 export(copy_SAINTe_doc)
+export(dataset_set_factors_deprecated)
 export(get_files_DIANN)
 export(get_params_Bfabric)
 export(normalize_exp)
 export(protein_2localSaint)
+export(read_DIANN_output)
 export(runSaint)
 export(transform_force)
+import(data.table)
